MID: 528 MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1499 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -190,10 +190,14 @@ tasca.llistat.confirmacio.alliberar=Estau segur que voleu alliberar aquesta tasc
 tasca.llistat.reassignacions.massiva=Reassignacion massiva
 tasca.llistat.reassignacions.programacio=Programació
 
+tasca.tramitacio.pipella.form=Dades
+tasca.tramitacio.pipella.document=Documents
+tasca.tramitacio.pipella.signatura=Signatures
 tasca.tramitacio.boto.guardar=Guardar
 tasca.tramitacio.boto.validar=Validar
 tasca.tramitacio.boto.restaurar=Restaurar
 tasca.tramitacio.boto.finalitzar=Finalitzar
+tasca.tramitacio.confirm.finalitzar=Estau segur que voleu finalitzar aquesta tasca?
 
 expedient.boto.nou_document=Nou document
 expedient.boto.nova_dada=Nova dada
