MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1500 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -15,6 +15,7 @@ fila.not.blank=La fila no pot estar buida
 error.contrasenya.repeticio=La contrasenya i la repetició no coincideixen
 error.persona.codi.repetit=Ja existeix una altra persona amb aquest codi
 error.entorn.codi.repetit=Ja existeix un altre entorn amb aquest codi
+error.cap.entorn=No hi ha cap entorn seleccionat
 error.area.codi.repetit=Ja existeix una altra area amb aquest codi
 error.areatipus.codi.repetit=Ja existeix una altre tipus d'àrea amb aquest codi
 error.carrec.codi.repetit=Ja existeix una altre càrrec amb aquest codi
