--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -28,11 +28,12 @@ expedient.llistat.filtre.camp.geopos=Geoposició
 expedient.llistat.filtre.camp.georef=Codi georeferencial
 expedient.llistat.filtre.camp.coordx=Coordenada X
 expedient.llistat.filtre.camp.coordy=Coordenada Y
-expedient.llistat.filtre.camp.tasques=Amb tasques actives
-expedient.llistat.filtre.camp.alertes=Amb alertes
-expedient.llistat.filtre.camp.anulats=Anul·lats
-expedient.llistat.filtre.camp.personals=Amb tasques personals
-expedient.llistat.filtre.camp.usuari=Amb tasques d'usuari
+expedient.llistat.filtre.camp.tasques=Només amb tasques pendents
+expedient.llistat.filtre.camp.alertes=Només amb alertes
+expedient.llistat.filtre.camp.anulats=Mostra anul·lats
+expedient.llistat.filtre.camp.personals=Només amb tasques personals
+expedient.llistat.filtre.camp.meves=Només tasques meves
+expedient.llistat.filtre.camp.grup=Només amb tasques de grup
 expedient.llistat.columna.expedient=Expedient
 expedient.llistat.columna.iniciat=Iniciat el
 expedient.llistat.columna.finalitzat=Finalitzat el
@@ -213,6 +214,9 @@ enum.tasca.etiqueta.SU=Suspesa
 enum.tasca.etiqueta.PD=Pendent
 enum.tasca.etiqueta.FI=Finalitzada
 enum.tasca.etiqueta.AG=Agafada
+
+enum.si=Sí
+enum.no=No
 
 comu.estat.iniciat=Iniciat
 comu.estat.finalitzat=Finalitzat
