MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1501 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -32,7 +32,7 @@ expedient.llistat.filtre.camp.tasques=Només amb tasques pendents
 expedient.llistat.filtre.camp.alertes=Només amb alertes
 expedient.llistat.filtre.camp.anulats=Mostra anul·lats
 expedient.llistat.filtre.camp.personals=Només amb tasques personals
-expedient.llistat.filtre.camp.meves=Només tasques meves
+expedient.llistat.filtre.camp.meves=Només les meves tasques
 expedient.llistat.filtre.camp.grup=Només amb tasques de grup
 expedient.llistat.columna.expedient=Expedient
 expedient.llistat.columna.iniciat=Iniciat el
@@ -115,7 +115,7 @@ expedient.log.proces.cap=Aquest proces no conté cap log
 expedient.tasca.columna.tasca=Tasca
 expedient.tasca.columna.tasca.activa=Tasca activa
 expedient.tasca.columna.responsable=Responsable
-expedient.tasca.columna.asignada_a=Asignada a
+expedient.tasca.columna.asignada_a=Assignada a
 expedient.tasca.columna.datcre=Creada el
 expedient.tasca.columna.datlim=Data límit
 expedient.tasca.columna.datfi=Finalitzada el
@@ -125,7 +125,7 @@ expedient.tasca.accio.agafar=Agafar
 expedient.tasca.accio.reassignar=Reassignar
 expedient.tasca.accio.suspendre=Suspendre
 expedient.tasca.accio.reprendre=Reprendre
-expedient.tasca.accio.cancelar=Cancelar
+expedient.tasca.accio.cancelar=Cancel·lar
 expedient.tasca.accio.alliberar=Alliberar
 expedient.tasca.grup.finalitzades=Tasques finalitzades
 expedient.tasca.confirmacio.suspendre=Estau segur que voleu suspendre aquesta tasca?
@@ -154,12 +154,12 @@ expedient.accio.modificar.boto.modificar=Modificar
 expedient.accio.buidarlog.confirmacio=Estau segur que voleu eliminar la informació de registre de l'expedient? Aquesta acció no es pot tornar enrera una vegada executada.
 
 tasca.llistat.titol=Consulta de tasques
-tasca.llistat.filtre.camp.titol=Titol
+tasca.llistat.filtre.camp.titol=Títol
 tasca.llistat.filtre.camp.expedient=Expedient
 tasca.llistat.filtre.camp.prioritat=Prioritat
 tasca.llistat.filtre.camp.tipexp=Tipus d'expedient
 tasca.llistat.filtre.camp.tasca=Tasca
-tasca.llistat.filtre.camp.datcre=Data creació
+tasca.llistat.filtre.camp.datcre=Data de creació
 tasca.llistat.filtre.camp.datcre.ini=Data creació inicial
 tasca.llistat.filtre.camp.datcre.fin=Data creació final
 tasca.llistat.filtre.camp.datlim=Data límit
@@ -182,13 +182,13 @@ tasca.llistat.accio.agafar=Agafar
 tasca.llistat.accio.reassignar=Reassignar
 tasca.llistat.accio.suspendre=Suspendre
 tasca.llistat.accio.reprendre=Reprendre
-tasca.llistat.accio.cancelar=Cancelar
+tasca.llistat.accio.cancelar=Cancel·lar
 tasca.llistat.accio.alliberar=Alliberar
 tasca.llistat.confirmacio.suspendre=Estau segur que voleu suspendre aquesta tasca?
 tasca.llistat.confirmacio.reprendre=Estau segur que voleu reprendre aquesta tasca?
 tasca.llistat.confirmacio.cancelar=Estau segur que voleu cancel·lar aquesta tasca? Aquesta acció no es pot tornar enrera una vegada executada.
 tasca.llistat.confirmacio.alliberar=Estau segur que voleu alliberar aquesta tasca?
-tasca.llistat.reassignacions.massiva=Reassignacion massiva
+tasca.llistat.reassignacions.massiva=Reassignació massiva
 tasca.llistat.reassignacions.programacio=Programació
 
 tasca.tramitacio.pipella.form=Dades
@@ -234,15 +234,22 @@ perfil.usuari.informes=Informes
 perfil.usuari.completa=Completa
 perfil.usuari.reducida=Reduïda
 perfil.usuari.nota=Nota
-perfil.usuari.nota.generales=Generales
+perfil.usuari.llistat.inicial=Listado inicial
+perfil.usuari.nota.generales=Generals
 perfil.usuari.nota.filtres=Filtres per defecte
 perfil.usuari.consulta=Consulta per tipus
-perfil.usuari.nota.consulta=Consulta per tipus per defecte que s'ha d'obrir.
+perfil.usuari.nota.consulta=Consulta per defecte que s'ha d'obrir.
 perfil.usuari.nota.tipusexpedientdefecte=Tipus d'expedient per defecte seleccionat.
 perfil.usuari.nota.pantalla=Veure la pantalla d'expedients o de tasques per defecte.
-perfil.usuari.nota.cabecera=Mida i format de capcalera.
+perfil.usuari.nota.cabecera=Mida i format de capçalera.
+perfil.usuari.cabecera=Capçalera
 perfil.usuari.nota.entorn=Entorn per defecte que s'ha d'obrir.
+perfil.usuari.entorn=Entorn
+perfil.usuari.elements.page=Elements per pàgina
+perfil.usuari.tipus.expedient=Tipus d'expedient
+perfil.usuari.consulta.tipus=Consulta
 perfil.usuari.nota.numelements=Numero d'elements que s'han de mostrar per defecte en les taules paginades.
+perfil.usuari.nota.filtre.defecte=Llistat d'expedients filtra per defecte o no expedients amb tasques actives per part de l'usuari.
 
 termini.data_ini=Data inici
 termini.data_fi=Data fi
