MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1502 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -59,6 +59,7 @@ expedient.llistat.consulta_avanzada=Consulta avançada
 
 expedient.document.no_disponible=Document no disponible
 expedient.document.signat=Document signat (clic per veure detalls)
+expedient.document.signat.carregant=Carregant certificats
 expedient.document.registrat=Document registrat (clic per veure detalls)
 
 expedient.tramitacio.massiva=Tramitació massiva
@@ -234,7 +235,7 @@ perfil.usuari.informes=Informes
 perfil.usuari.completa=Completa
 perfil.usuari.reducida=Reduïda
 perfil.usuari.nota=Nota
-perfil.usuari.llistat.inicial=Listado inicial
+perfil.usuari.llistat.inicial=Llistat inicial
 perfil.usuari.nota.generales=Generals
 perfil.usuari.nota.filtres=Filtres per defecte
 perfil.usuari.consulta=Consulta per tipus
