MID: 528 MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1503 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -113,7 +113,7 @@ expedient.termini.estat=Estat
 expedient.termini.estat.actiu=Actiu
 expedient.termini.estat.error=Error
 expedient.termini.estat.process=En procés
-expedient.termini.estat.finalizat=Finalizat
+expedient.termini.estat.finalizat=Finalitzat
 expedient.termini.estat.cancelat=Cancel·lat
 expedient.termini.estat.pendent=Pendent d'iniciar
 expedient.termini.estat.pendent_solament=Pendent
