--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -88,6 +88,7 @@ expedient.info.pipella.dades=Dades
 expedient.info.pipella.documents=Documents
 expedient.info.pipella.terminis=Terminis
 expedient.info.pipella.registre=Registre
+expedient.info.pipella.cronograma=Cronograma
 expedient.info.confirm.dada.esborrar=Estau segur que voleu esborrar aquesta dada de l'expedient?
 expedient.info.permis.no=No disposa de permís per a modificar l'expedient
 
