MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1512 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -32,7 +32,7 @@ expedient.llistat.filtre.camp.tasques=Només amb tasques pendents
 expedient.llistat.filtre.camp.alertes=Només amb alertes
 expedient.llistat.filtre.camp.anulats=Mostra anul·lats
 expedient.llistat.filtre.camp.personals=Només amb tasques personals
-expedient.llistat.filtre.camp.meves=Només les meves tasques
+expedient.llistat.filtre.camp.meves=Només amb tasques meves
 expedient.llistat.filtre.camp.grup=Només amb tasques de grup
 expedient.llistat.columna.expedient=Expedient
 expedient.llistat.columna.iniciat=Iniciat el
@@ -77,12 +77,13 @@ expedient.info.camp.estat=Estat
 expedient.info.camp.defproc=Definició de procés
 expedient.info.participants=Persones participants
 expedient.info.relacionats=Expedients relacionats
-expedient.info.accio.modificar=Modificar informació...
-expedient.info.accio.relacionar=Afegir relació...
-expedient.info.accio.aturar=Aturar...
-expedient.info.accio.anular=Anul·lar...
-expedient.info.accio.script=Executar script...
-expedient.info.accio.buidarlog=Eliminar informació registre...
+expedient.info.accio.modificar=Modificar informació
+expedient.info.accio.relacionar=Afegir relació
+expedient.info.accio.aturar=Aturar
+expedient.info.accio.anular=Anul·lar
+expedient.info.accio.script=Executar script
+expedient.info.accio.reindexa=Reindexar l'expedient
+expedient.info.accio.buidarlog=Eliminar informació registre
 expedient.info.pipella.tasques=Tasques
 expedient.info.pipella.dades=Dades
 expedient.info.pipella.documents=Documents
@@ -145,6 +146,7 @@ expedient.accio.aturar.camp.motiu=Motiu
 expedient.accio.aturar.boto.aturar=Aturar
 expedient.accio.anular.titol=Anul·lar expedient
 expedient.accio.anular.confirmacio=Estau segur que voleu anul·lar aquest expedient?
+expedient.accio.reindexa.confirmacio=Estau segur que voleu reindexar aquest expedient?
 expedient.accio.anular.camp.motiu=Motiu
 expedient.accio.anular.boto.anular=Anul·lar
 expedient.accio.script.titol=Executar script
@@ -167,7 +169,9 @@ tasca.llistat.filtre.camp.datcre.fin=Data creació final
 tasca.llistat.filtre.camp.datlim=Data límit
 tasca.llistat.filtre.camp.datlim.ini=Data límit inicial
 tasca.llistat.filtre.camp.datlim.fin=Data límit final
-
+tasca.llistat.filtre.camp.meves=Només les meves tasques
+tasca.llistat.filtre.camp.personals=Només tasques personals
+tasca.llistat.filtre.camp.grup=Només tasques de grup
 tasca.llistat.filtre.camp.mostrar.usuari=Tasques personals
 tasca.llistat.filtre.camp.mostrar.grup=Tasques de grup
 
