--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -206,6 +206,10 @@ tasca.tramitacio.boto.restaurar=Restaurar
 tasca.tramitacio.boto.finalitzar=Finalitzar
 tasca.tramitacio.confirm.finalitzar=Estau segur que voleu finalitzar aquesta tasca?
 
+tasca.tramitacio.form.no.validat=Les dades de la tasca no han estat validades
+tasca.tramitacio.documents.no.complet=Hi ha documents obligatoris que no han estat adjuntats a la tasca
+tasca.tramitacio.firmes.no.complet=Hi ha documents amb firma obligatòria que estan pendents de firmar
+
 expedient.boto.nou_document=Nou document
 expedient.boto.nova_dada=Nova dada
 
