MID: 528 MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1518 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -132,24 +132,26 @@ expedient.eines.confirm_aturar_tramitacio=Estau segur que voleu aturar la tramit
 expedient.eines.confirm_modificar_variable=Estau segur que voleu modificar el valor d'aquesta variable en aquest(s) expedient(s)?
 expedient.eines.confirm_modificar_document=Estau segur que voleu modificar aquest document en aquest(s) expedient(s)?
 expedient.eines.confirm_reprendre_tramitacio=Estau segur que voleu reprendre la tramitació d'aquest expedient?
+expedient.eines.confirm_reprendre_tramitacions=Estau segur que voleu reprendre la tramitació dels expedients?
 expedient.eines.confirm_reindexar_expedient=Estau segur que voleu reindexar l'expedient?
 expedient.eines.confirm_reindexar_expedients=Estau segur que voleu reindexar el(s) expedient(s)?
 expedient.eines.confirm_buidarlog_expedient=Estau segur que voleu eliminar la informació de registre de l'expedient? Un cop realitzada aquesta acció, no es podrà retrocedir l'expedient mitjançant la informació de registre!!!
 expedient.eines.confirm_buidarlog_expedients=Estau segur que voleu eliminar la informació de registre del(s) expedient(s)? Un cop realitzada aquesta acció, no es podran retrocedir els expedients mitjançant la informació de registre!!!
-expedient.eines.confirm_reprendre_expedient=Estau segur que voleu reprendre l'expedient?
-expedient.eines.confirm_reprendre_expedients=Estau segur que voleu reprendre l'expedient(s)?
+expedient.eines.confirm_reprendre_expedient=Estau segur que voleu desfer la finalització de l'expedient?
+expedient.eines.confirm_reprendre_expedients=Estau segur que voleu desfer la finalització del(s) expedient(s)?
 expedient.eines.confirm_reassignar_expedients=Estau segur que voleu reassignar la(es) tasca(ques)?
 expedient.eines.confirm_executar_script_proces=Estau segur que voleu executar aquest script en aquest procés?
 expedient.eines.confirm_canviar_versio_proces=Estau segur que voleu canviar la versió d'aquest procés?
 expedient.eines.aturar_tramitacio=Aturar la tramitació de l'expedient
 expedient.eines.reprendre_tramitacio=Reprendre la tramitació de l'expedient
+expedient.eines.reprendre_tramitacions=Reprendre la tramitació dels expedients
 expedient.eines.motiu=Motiu
 expedient.eines.execucio_scripts=Execució d'scripts
 expedient.eines.reindexa_proces=Reindexar l'expedient
 expedient.eines.reindexar.expedients=Reindexar expedients
 expedient.eines.buidarlog_proces=Eliminar la informació de registre de l'expedient
-expedient.eines.reprendre_expedient=Reprendre l'expedient
-expedient.eines.reprendre_expedients=Reprendre els expedients
+expedient.eines.reprendre_expedient=Desfer finalització de l'expedient
+expedient.eines.reprendre_expedients=Desfer finalització dels expedients
 expedient.eines.buidarlog.expedients=Eliminar la informació de registre dels expedients
 expedient.eines.reassignar.expedients=Reassignar tasca
 expedient.eines.script=Script
@@ -481,7 +483,8 @@ info.accio.massiu.executat=S&#39;ha programat la execució d''accions a {0} exped
 info.reindexar.massiu.executat=S&#39;ha programat la reindexació de {0} expedient(s)
 info.buidarlog.massiu.executat=S&#39;ha programat la eliminació de la informació de registre de {0} expedient(s)
 info.accio.massiu.reassignat=S&#39;ha programat la reassignació de {0} tasca(ques)
-info.accio.massiu.reprendre_expedient=S&#39;ha programat la represa de {0} expedient(s)
+info.accio.massiu.reprendre=S&#39;ha programat l&#39;acció de reprendre tramitació de {0} expedient(s)
+info.accio.massiu.reprendre_expedient=S&#39;ha programat l'acció de desfer finalització de {0} expedient(s)
 info.expedient.desanulat = L'expedient s'ha activat correctament
 info.dada.creat=La dada s'ha creat correctament
 info.expedient.reindexat=L'expedient s&#39;ha reindexat correctament
@@ -700,6 +703,7 @@ comuns.tots.tipus=Tots els tipus
 comuns.expedients=Expedients
 comuns.informes=Informes
 comuns.activitat=Activitat
+comuns.desfer=Desfer
 
 alerta.llistat.alertes=Alertes
 alerta.llistat.confirmacio=Estau segur que voleu esborrar aquesta tarea?
