MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1523 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -85,6 +85,7 @@ expedient.info.accio.script=Executar script
 expedient.info.accio.reindexa=Reindexar l'expedient
 expedient.info.accio.buidarlog=Eliminar informació registre
 expedient.info.pipella.tasques=Tasques
+expedient.info.pipella.accions=Accions
 expedient.info.pipella.dades=Dades
 expedient.info.pipella.documents=Documents
 expedient.info.pipella.terminis=Terminis
@@ -233,6 +234,7 @@ comu.estat.finalitzat=Finalitzat
 comu.filtre.filtrar=Filtrar
 comu.filtre.netejar=Netejar
 comu.boto.accions=Accions
+comu.boto.eines=Eines
 comu.boto.cancelar=Cancel·lar
 comu.boto.generar=Generar
 comu.boto.tancar=Tancar
