--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -223,6 +223,7 @@ error.tasca.validada=Aquesta tasca ja està validada
 error.especificar.document=s''ha d''especificar un document
 error.especificar.data=s''ha d''especificar la data
 error.extensio.document=L'extensió d''aquest document no està permesa
+error.extensio.document.permesa=L'extensió d''aquest document no està permesa. Només es permeten:
 
 error.executar.accio=No s''ha pogut executar l''acció
 error.accio.no.permesa=No té permisos per executar aquesta acció
