MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1527 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -12,6 +12,12 @@ in.past=La data ha de ser anterior al dia d''avui
 
 fila.not.blank=La fila no pot estar buida
 
+lectura.not.blank=Aquest valor no pot estar buit
+lectura.not.null=Aquest valor no pot estar buit
+lectura.fila.not.blank=La fila no pot estar buida
+lectura.email=El contingut d''aquest camp ha de ser una adreça de correu vàlida
+lectura.max.length=El contingut d''aquest camp excedeix la llargada màxima
+
 error.contrasenya.repeticio=La contrasenya i la repetició no coincideixen
 error.persona.codi.repetit=Ja existeix una altra persona amb aquest codi
 error.entorn.codi.repetit=Ja existeix un altre entorn amb aquest codi
