MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1531 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -85,6 +85,7 @@ expedient.info.accio.script=Executar script
 expedient.info.accio.reindexa=Reindexar l'expedient
 expedient.info.accio.buidarlog=Eliminar informació registre
 expedient.info.pipella.tasques=Tasques
+expedient.info.pipella.tokens=Tokens
 expedient.info.pipella.accions=Accions
 expedient.info.pipella.dades=Dades
 expedient.info.pipella.documents=Documents
@@ -93,6 +94,8 @@ expedient.info.pipella.registre=Registre
 expedient.info.pipella.cronograma=Cronograma
 expedient.info.confirm.dada.esborrar=Estau segur que voleu esborrar aquesta dada de l'expedient?
 expedient.info.permis.no=No disposa de permís per a modificar l'expedient
+expedient.info.token.activat=El token s'ha activat correctament
+expedient.info.token.desactivat=El token s'ha desactivat correctament
 
 expedient.dada.borrar.error=S'ha produït un error al interntar esborrar la dada de l'expedient
 expedient.dada.modificar.error=S'ha produït un error al interntar modificar la dada de l'expedient
@@ -105,6 +108,29 @@ expedient.termini.confirmar.cancelar=Estau segur que voleu calcel·lar aquest ter
 expedient.termini.nomostrar=No hi ha terminis per a mostrar
 expedient.termini.expedient.cap=Aquest expedient no conté cap termini
 expedient.termini.proces.cap=Aquest proces no conté cap termini
+
+expedient.token.nomostrar=No hi ha tokens per a mostrar
+expedient.token.expedient.cap=Aquest expedient no conté cap token
+expedient.token.proces.cap=Aquest proces no conté cap token
+expedient.token.id=Id
+expedient.token.nom=Nom
+expedient.token.pare=Pare
+expedient.token.root=Root
+expedient.token.node=Node
+expedient.token.entrada=Entrada
+expedient.token.creat=Creat el
+expedient.token.finalitzat=Finalitzat el
+expedient.token.flags=Flags
+expedient.token.confirmar.retrocedir=Estau segur que voleu retrocedir aquest token?
+expedient.token.accio.retrocedir=Retrocedir
+expedient.token.confirmar.activar=Estau segur que voleu activar aquest token?
+expedient.token.accio.activar=Activar
+expedient.token.confirmar.desactivar=Estau segur que voleu desactivar aquest token?
+expedient.token.accio.desactivar=Desactivar
+expedient.token.retrocedir=Retrocedir token
+expedient.token.node.retrocedir=Node on retrocedir
+expedient.token.node.buit= << Seleccioni un node >>
+expedient.token.node.cancelar=Cancel·lar tasques?
 
 expedient.tasca.expedient.cap=Aquest expedient no conté cap tasca
 expedient.tasca.proces.cap=Aquest proces no conté cap tasca
