MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1532 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -82,6 +82,7 @@ expedient.info.accio.relacionar=Afegir relació
 expedient.info.accio.aturar=Aturar
 expedient.info.accio.anular=Anul·lar
 expedient.info.accio.script=Executar script
+expedient.info.accio.executar=Executar
 expedient.info.accio.reindexa=Reindexar l'expedient
 expedient.info.accio.buidarlog=Eliminar informació registre
 expedient.info.pipella.tasques=Tasques
@@ -183,6 +184,7 @@ expedient.accio.script.boto.executar=Executar
 expedient.accio.modificar.titol=Modificar informació de l'expedient
 expedient.accio.modificar.boto.modificar=Modificar
 expedient.accio.buidarlog.confirmacio=Estau segur que voleu eliminar la informació de registre de l'expedient? Aquesta acció no es pot tornar enrera una vegada executada.
+expedient.accio.nom=Nombre
 
 tasca.llistat.titol=Consulta de tasques
 tasca.llistat.filtre.camp.titol=Títol
