MID: 741. MSG: Nova interfície v3
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1534 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -238,6 +238,7 @@ error.validar.formulari=No s''ha pogut validar el formulari
 error.restaurar.formulari=No s''ha pogut restaurar el formulari
 error.afegir.camp.multiple=No s''ha pogut afegir el camp múltiple
 error.esborrar.camp.multiple=No s''ha pogut esborrar el camp múltiple
+error.accio.no.publica=No es pot executar l'acció perquè no és pública
 
 error.no.enumeracio.selec=No s''ha seleccionat cap enumeració
 error.enumeracio.codi.repetit=Ja existeix una enumeració amb aquest codi
