--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -110,6 +110,8 @@ expedient.termini.nomostrar=No hi ha terminis per a mostrar
 expedient.termini.expedient.cap=Aquest expedient no conté cap termini
 expedient.termini.proces.cap=Aquest proces no conté cap termini
 
+expedient.accio.proces.cap=Aquest proces no conté cap acció
+
 expedient.token.nomostrar=No hi ha tokens per a mostrar
 expedient.token.expedient.cap=Aquest expedient no conté cap token
 expedient.token.proces.cap=Aquest proces no conté cap token
