MID: 741 MSG: Nova interfície v3
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1549 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -98,6 +98,7 @@ expedient.info.permis.no=No disposa de permís per a modificar l'expedient
 expedient.info.token.activat=El token s'ha activat correctament
 expedient.info.token.desactivat=El token s'ha desactivat correctament
 
+expedient.dada.mostrar.ocultes=Mostrar ocultes
 expedient.dada.borrar.error=S'ha produït un error al interntar esborrar la dada de l'expedient
 expedient.dada.modificar.error=S'ha produït un error al interntar modificar la dada de l'expedient
 expedient.nova.data.camp.variable.buit=El camp variable no pot estar buit
