MID: 741 MSG: Nova interfície v3
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1575 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -172,7 +172,7 @@ error.canviar.versio.proces=No s''ha pogut canviar la versió de procés
 error.executar.reassignacio=No s''ha pogut realitzar la reassignació
 
 error.exist.exp.mateix.numero=Ja existeix un expedient amb el mateix número, torni a iniciar l'expedient
-error.iniciar.expedient=s''ha produït un error iniciant l'expedient
+error.iniciar.expedient=S'ha produït un error iniciant l'expedient
 error.permisos.iniciar.tipus.exp=No té permisos per iniciar expedients d''aquest tipus
 
 error.reassignar.tasca=No s''ha pogut reassignar la tasca {0}
