MID: 741 MSG: Nova interfície v3
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1582 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -68,6 +68,8 @@ expedient.informe.canviar=Canviar consulta
 
 expedient.info.titol=Informació de l'expedient
 expedient.info.informacio=Informació
+expedient.info.aturat=Expedient aturat
+expedient.info.comentari=Comentari
 expedient.info.camp.numero=Número
 expedient.info.camp.titol=Títol
 expedient.info.camp.tipus=Tipus
@@ -237,6 +239,7 @@ tasca.tramitacio.boto.validar=Validar
 tasca.tramitacio.boto.restaurar=Restaurar
 tasca.tramitacio.boto.finalitzar=Finalitzar
 tasca.tramitacio.confirm.finalitzar=Estau segur que voleu finalitzar aquesta tasca?
+tasca.tramitacio.sense.pipelles=Aquesta tasca no requereix omplir cap dada ni adjuntar cap document o firma. Seleccioni alguna de les opcions per a finalitzar-la.
 
 tasca.tramitacio.form.no.validat=Les dades de la tasca no han estat validades
 tasca.tramitacio.documents.no.complet=Hi ha documents obligatoris que no han estat adjuntats a la tasca
