--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -42,7 +42,9 @@ expedient.llistat.columna.estat=Estat
 expedient.llistat.accio.consultar=Consultar
 expedient.llistat.accio.consultar.expedient=Consultar expedient
 expedient.llistat.accio.aturar=Aturar
+expedient.llistat.accio.reprendre=Reprendre
 expedient.llistat.accio.anular=Anul·lar
+expedient.llistat.accio.activar=Activar
 expedient.llistat.accio.esborrar=Esborrar
 expedient.llistat.accio.massiva=Acció massiva
 expedient.llistat.tramitacio.massiva=Tramitació massiva
@@ -81,7 +83,8 @@ expedient.info.participants=Persones participants
 expedient.info.relacionats=Expedients relacionats
 expedient.info.accio.modificar=Modificar informació
 expedient.info.accio.relacionar=Afegir relació
-expedient.info.accio.aturar=Aturar
+expedient.info.accio.aturar=Aturar tramitació
+expedient.info.accio.reprendre=Reprendre tramitació
 expedient.info.accio.anular=Anul·lar
 expedient.info.accio.script=Executar script
 expedient.info.accio.executar=Executar
