MID: 741. MSG: Nova interfície v3
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1590 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -255,6 +255,8 @@ expedient.nova.data.nova=Nova variable
 expedient.nova.data.existent=Variables definides en el procés
 expedient.nova.data.string=Nova variable de tipus String
 expedient.nova.data.selecciona=Selecciona una opció
+expedient.nova.data.codi=Codi
+expedient.nova.data.valor=Valor
 
 enum.tasca.etiqueta.grup=Tasca de grup
 enum.tasca.etiqueta.CA=Cancel·lada
