--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -5,7 +5,8 @@ decorator.rol.usuari=Usuari
 decorator.menu.expedients=Expedients
 decorator.menu.tasques=Tasques
 decorator.menu.informes=Informes
-decorator.menu.consultes=Consultes
+decorator.menu.consultes=Consultes específiques
+decorator.menu.consultes.generic=Consulta general
 decorator.menu.administracio=Administració
 decorator.menu.administracio.tasques.execucio=Tasques en execució
 
@@ -84,6 +85,7 @@ expedient.info.relacionats=Expedients relacionats
 expedient.info.accio.modificar=Modificar informació
 expedient.info.accio.relacionar=Afegir relació
 expedient.info.accio.aturar=Aturar tramitació
+expedient.info.accio.activar=Activar
 expedient.info.accio.reprendre=Reprendre tramitació
 expedient.info.accio.anular=Anul·lar
 expedient.info.accio.script=Executar script
