MID: 741. MSG: Nova interfície v3
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1599 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -39,6 +39,7 @@ expedient.consulta.error.integracions=Aquest expedient conté errors provinents d
 expedient.consulta.confirm.esborrar=Estau segur que voleu esborrar aquest expedient?
 expedient.consulta.confirm.anular=Estau segur que voleu anul·lar aquest expedient?
 expedient.consulta.confirm.desanular=Estau segur que voleu tornar a activar aquest expedient?
+expedient.consulta.confirm.desfinalitzar=Estau segur que voleu desfer la finalització d'aquest expedient?
 expedient.consulta.anulacio.motiu=Introdueixi el motiu de l'anul·lació
 expedient.consulta.massiva.activar=Activar accions massives
 expedient.consulta.massiva.desactivar=Desactivar accions massives
@@ -535,6 +536,7 @@ info.expedient.aturat=L'expedient s'ha aturat correctament
 info.expedient.aturats=S'ha(n) aturat
 info.expedient.massiu.aturats=S&#39;ha programat l&#39;aturada de {0} expedient(s)
 info.expedient.repres=L'expedient s'ha représ correctament
+info.expedient.reactivat=L'expedient s'ha activat correctament
 info.canvi.versio.realitzat=El canvi de versió s'ha realitzat correctament
 info.canvi.versio.realitzat.nprimers=El canvi de versió s'ha realitzat correctament en els primers {0} expedients
 info.canvi.versio.massiu=S&#39;ha programat el canvi de versió de {0} expedient(s)
@@ -1466,7 +1468,8 @@ error.tornau=Per favor, tornau
 error.enrere=enrere
 error.i_provau=i provau novament a executar la mateixa petició en uns instants.
 error.si_persist=Si l'error persisteix posau-vos en contacte amb l'administrador de l'aplicació.
-error.activar.expedient = Hi ha hagut un error a l'hora d'activar el expedient
+error.activar.expedient = Hi ha hagut un error a l'hora d'activar l'expedient
+error.reprendre.expedient = Hi ha hagut un error a l'hora d'activar l'expedient
 error.permissos.desanular.expedients = No teniu permís per activar l'expedient
 login.autenticacio=Autenticació
 login.usuari=Usuari
