--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -46,6 +46,7 @@ expedient.llistat.accio.aturar=Aturar
 expedient.llistat.accio.reprendre=Reprendre
 expedient.llistat.accio.anular=Anul·lar
 expedient.llistat.accio.activar=Activar
+expedient.llistat.accio.reprendre=Reprendre
 expedient.llistat.accio.esborrar=Esborrar
 expedient.llistat.accio.massiva=Acció massiva
 expedient.llistat.tramitacio.massiva=Tramitació massiva
@@ -88,6 +89,7 @@ expedient.info.accio.aturar=Aturar tramitació
 expedient.info.accio.activar=Activar
 expedient.info.accio.reprendre=Reprendre tramitació
 expedient.info.accio.anular=Anul·lar
+expedient.info.accio.desfinalitzar=Desfer finalització
 expedient.info.accio.script=Executar script
 expedient.info.accio.executar=Executar
 expedient.info.accio.reindexa=Reindexar l'expedient
