MID: 741 MSG: Nova interfície v3
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1603 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -324,7 +324,7 @@ error.codi.var.incorrecte=El codi de la variable no pot començar per majúscula, 
 error.no.tiexep.selec=No hi ha cap tipus d''expedient seleccionat 
 error.no.exp.selec=No ha seleccionat cap expedient
 error.no.exp.selec.noDocAnnexat=Els expedients seleccionats no tenen cap document annexat per modificar
-error.no.exp.selec.diferenttipus=Els expedients seleccionats no pot ser de diferent tipus d'expedient
+error.no.exp.selec.diferenttipus=Els expedients seleccionats no poden ser de diferents tipus d'expedient
 error.no.tasc.selec=No ha seleccionat cap tasca
 error.no.exp.execmasiv=No s'ha trobat cap expedient que es pugui executar massivament
 
