MID: 741. MSG: Nova interfície v3
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1605 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -65,6 +65,8 @@ expedient.document.no_disponible=Document no disponible
 expedient.document.signat=Document signat (clic per veure detalls)
 expedient.document.signat.carregant=Carregant certificats
 expedient.document.registrat=Document registrat (clic per veure detalls)
+expedient.document.adjuntat=Adjuntat 
+expedient.document.data=Data 
 
 expedient.tramitacio.massiva=Tramitació massiva
 
