MID: 741. MSG: Nova interfície v3
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1611 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -57,6 +57,8 @@ expedient.consulta.anulats.tots=Actius i anul·lats
 expedient.consulta.anulats.mostrar=Mostrar expedients
 expedient.consulta.params.modal.titol=Paràmetres de l'informe
 
+expedient.dada.esborrar=Esborrar dada
+expedient.dada.modificar=Modificar dada
 expedient.dada.afegir_dada=Afegir dada
 expedient.dada.select.variable=Seleccioni una variable
 expedient.dada.variable=Variable
@@ -74,6 +76,8 @@ expedient.dada.ocults=Visualitzar camps ocults
 expedient.document.expedient.cap=Aquest expedient no conté cap document
 expedient.document.proces.cap=Aquest procés no conté cap document
 expedient.document.adjuntar=Adjuntar nou document
+expedient.document.esborrar=Esborrar document
+expedient.document.esborrar.signatures=Document signat (clic per esborrar totes les signatures)
 expedient.document.modificar_adjunt=Modificar document adjunt
 expedient.document.titol=Títol
 expedient.document.arxiu=Arxiu
