MID: 741. MSG: Nova interfície v3
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1613 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -5,7 +5,7 @@ decorator.rol.usuari=Usuari
 decorator.menu.expedients=Expedients
 decorator.menu.tasques=Tasques
 decorator.menu.informes=Informes
-decorator.menu.consultes=Consultes específiques
+decorator.menu.consultes=Consultes
 decorator.menu.consultes.generic=Consulta general
 decorator.menu.administracio=Administració
 decorator.menu.administracio.tasques.execucio=Tasques en execució
