MID: 741. MSG: Nova interfície v3
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1625 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -12,6 +12,7 @@ decorator.menu.administracio.tasques.execucio=Tasques en execució
 
 expedient.llistat.titol=Consulta d'expedients
 expedient.llistat.tasca.ajax.error=Error al refrescar la llista d'tasques
+expedient.llistat.expedientTipusPermis.ajax.error=Error l'obtenir els permisos sobre aquest tipus d'expedient
 expedient.llistat.estats.ajax.error=Error al refrescar la llista d'estats
 expedient.llistat.consults.ajax.error=Error al refrescar la llista d'consults
 expedient.llistat.filtre.camp=Filtre per
