MID: 741. MSG: Nova interfície v3
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1639 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -274,6 +274,7 @@ enum.tasca.etiqueta.AG=Agafada
 
 enum.si=Sí
 enum.no=No
+enum.si.only=Només anul·lats
 
 comu.estat.iniciat=Iniciat
 comu.estat.finalitzat=Finalitzat
