MID: 741. MSG: Nova interfície v3
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1643 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -70,6 +70,9 @@ expedient.document.adjuntat=Adjuntat
 expedient.document.data=Data 
 
 expedient.tramitacio.massiva=Tramitació massiva
+expedient.tramitacio.massiva.header.nom=Nom tramitació
+expedient.tramitacio.massiva.header.execucio=Execució
+expedient.tramitacio.massiva.header.dates=Data inici - Data Fi
 
 expedient.informe.canviar=Canviar consulta
 
