MID: 741. MSG: Nova interfície v3
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1644 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -698,6 +698,8 @@ comuns.tipus_exp=Tipus d'expedient
 comuns.tract_dona=Tractament dona
 comuns.tract_home=Tractament home
 comuns.massiu=Execucions massives
+comuns.massiu.usuari = Execucions massives de l'usuari
+comuns.massiu.entorn = Execucions massives de l'entorn
 comuns.tancar=Tancar
 comuns.progres=Progrés
 comuns.refrescar=Refrescar
