--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -72,7 +72,9 @@ expedient.document.data=Data
 expedient.tramitacio.massiva=Tramitació massiva
 expedient.tramitacio.massiva.header.nom=Nom tramitació
 expedient.tramitacio.massiva.header.execucio=Execució
-expedient.tramitacio.massiva.header.dates=Data inici - Data Fi
+expedient.tramitacio.massiva.header.dataInici=Data inici
+expedient.tramitacio.massiva.header.dataFi=Data Fi
+expedient.tramitacio.massiva.header.usuari=Usuari
 
 expedient.informe.canviar=Canviar consulta
 
